--- a/style.css
+++ b/style.css
@@ -143,37 +143,59 @@ footer {
     min-height: 60px;
     padding: 0;
     margin: 0;
+    font-size: 0;
 }
-.top-menu__item {
-    padding: 20px 30px;
-}
-.top-menu__item a:focus {
+.submenu__item:hover,
+.top-menu__item:hover{
     background-color: #106c93;
-    border-radius: 30px;
-    padding: 10px 15px;
 }
 .top-menu__item a:active {
     outline: none;
 }
-.top-menu li {
+.top-menu .top-menu__item {
     display: inline-block;
+    text-align: center;
     position: relative;
+    width: 20%;
+    font-size: 16px;
 }
+.top-menu .top-menu__item:hover .submenu{
+    visibility: visible;
+}
+
+li.submenu__item>a {
+    color: #fff;
+    font-weight: 500;
+    text-decoration: none;
+    text-transform: uppercase;
+   /* -webkit-transition-duration: 0.7s;
+    transition-duration: 0.7s;*/
+    display: inline-block;
+    width: 100%;
+    padding: 20px 20px;
+}
+
 .top-menu__item a {
     color: #fff;
     font-weight: 500;
     text-decoration: none;
     text-transform: uppercase;
-    -webkit-transition: 0.7s;
-    transition: 0.7s;
+  /*  -webkit-transition-duration: 0.7s;
+    transition-duration: 0.7s;*/
+    display: inline-block;
+    width: 100%;
+    padding: 20px 0;
 }
 ul.submenu {
-    display: none;
+    visibility: hidden;
     position: absolute;
-    width: 120px;
-    top: 37px;
+    top: 100%;
     left: 0;
     font-size: 13px;
+    list-style: none;
+    padding: 0;
+    text-align: left;
+    background-color: #313946;
 }
 ul.submenu > .submenu-focus > a {
     display: block;
@@ -182,6 +204,7 @@ ul.submenu > .submenu-focus > a {
     background-color: red;
     text-decoration: none;
 }
+
 ul.submenu > .submenu-focus > a:hover {
     text-decoration: underline;
 }
@@ -288,20 +311,30 @@ ul.menu > .submenu-focus:hover > ul.submenu  {
 
 .main__carousel {
     margin-bottom: 70px;
-    overflow: hidden;
+    position: relative
 }
 .main__carousel .owl-item {
     display: inline-block;
+}
+.main__carousel .carousel-items {
     width: 290px;
     height: 365px;
+    margin: 5px;
     box-shadow: 0 0 5px rgba(0,0,0,0.5);
 }
+.owl-stage-outer{
+    overflow: hidden
+}
 
-/*
-element.style {
+.owl-theme .owl-nav [class*=owl-]:hover{
+    background: none;
+}
+
+
+.owl-theme .owl-nav .owl-prev {
     position: absolute;
-    top: 10px;
-    left: 30px;
+    top: 150px;
+    left: -50px;
     font-size: 0;
     background: transparent;
     border-bottom: 1px solid red;
@@ -312,7 +345,8 @@ element.style {
     border-radius: 0;
     padding: 0;
     transform: rotate(45deg);
-}*/
+}
+
 .carousel-block img {
     margin-top: 30px;
 }
