--- a/style.css
+++ b/style.css
@@ -482,6 +482,7 @@ input {
     border: 1px solid #c6c7cc;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .1);
     padding: 10px 0 0 10px;
+    width: 100%;
     resize: none;
 }
 .main__about__button__feedback {
